# TicTacToeAI

./: CMakeLists.txt  main.cpp  mainGUI.cpp  qt_cheatsheet.md  qt_test.cpp  ticTacToe.cpp  ticTacToe.h
